After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790862 - Addition of insert_emoji breaks ABI on gtk-3-22
Addition of insert_emoji breaks ABI on gtk-3-22
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkEntry
3.22.x
Other All
: Normal blocker
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-11-26 21:54 UTC by Jan Alexander Steffens (heftig)
Modified: 2017-11-26 23:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
entry: Undo ABI breakage from addition of insert_emoji (1.40 KB, patch)
2017-11-26 21:54 UTC, Jan Alexander Steffens (heftig)
committed Details | Review

Description Jan Alexander Steffens (heftig) 2017-11-26 21:54:54 UTC
Created attachment 364452 [details] [review]
entry: Undo ABI breakage from addition of insert_emoji

This causes gedit to open the emoji picker on Ctrl+F. Probably also breaks other things.
Comment 1 Matthias Clasen 2017-11-26 23:25:12 UTC
Attachment 364452 [details] pushed as b0fb67e - entry: Undo ABI breakage from addition of insert_emoji