entry: Undo ABI breakage from addition of insert_emoji

https://bugzilla.gnome.org/show_bug.cgi?id=790862